--- a/StudentExercisesAPI/appsettings.json
+++ b/StudentExercisesAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-U33P79O\\SQLEXPRESS;Database=StudentExercises;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-LVBN4M3\\SQLEXPRESS;Initial Catalog=StudentExercises;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
